test/testdata/idling-svc-route.yaml
apiVersion: v1
kind: List
metadata: {}
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: idling-echo
    labels:
      app: idling-echo
  spec:
    selector:
      app: idling-echo
    ports:
      - port: 8675
        name: tcp-echo
        protocol: TCP
      - port: 3090
        name: udp-echo
        protocol: UDP
- apiVersion: v1
  kind: Route
  metadata:
    name: idling-echo
  spec:
    to:
      kind: Service
      name: idling-echo
- apiVersion: v1
  kind: Route
  metadata:
    name: idling-echo-reencrypt
  spec:
    tls:
      termination: reencrypt
      # the actual certificate here is not relevant, since we're not
      # actually serving TLS
      destinationCACertificate: |-
        -----BEGIN CERTIFICATE-----
        MIIDIjCCAgqgAwIBAgIBATANBgkqhkiG9w0BAQUFADCBoTELMAkGA1UEBhMCVVMx
[...]
        +Dzv5hqgSfvMG392KWh5f8xXfJNs4W5KLbZyl901MeReiLrPH3w=
        -----END CERTIFICATE-----
    to:
      kind: Service
      name: idling-echo
